# aitrios-edge-device-system-app

./: .clang-format  .gitignore  README.md  meson.build
src/initial_setting_app/: Kconfig  initial_setting_app_button.c  initial_setting_app_button.h  initial_setting_app_log.h  initial_setting_app_main.h  initial_setting_app_ps.c  initial_setting_app_ps.h  initial_setting_app_ps_stub.c  initial_setting_app_qr_decode.c  initial_setting_app_qr_decode.h  initial_setting_app_qr_decode_internal.c  initial_setting_app_qr_decode_internal.h  initial_setting_app_qr_decode_internal_private.h  initial_setting_app_qrcode.c  initial_setting_app_qrcode.h  initial_setting_app_qrcode_private.h  initial_setting_app_timer.c  initial_setting_app_timer.h  initial_setting_app_timer_private.h  initial_setting_app_util.h  main.c  meson.build
src/system_app/modules/SystemApp/: meson.build  system_app_additional_info.c  system_app_button.c  system_app_common.c  system_app_configuration.c  system_app_deploy.c  system_app_deploy_private.h  system_app_direct_command.c  system_app_direct_command_private.h  system_app_led.c  system_app_log.c  system_app_main.c  system_app_main_private.h  system_app_state.c  system_app_timer.c  system_app_timer_private.h  system_app_ud_main.c  system_app_vsc_manager.c
src/system_app/modules/SystemApp/test/: CMakeLists.txt  exec_unit_test.sh  run_gtest_system_app.sh
src/system_app/modules/SystemApp/test/src/: CMakeLists.txt  ut_int.cpp  ut_int_fix.cpp  ut_system_app_main.cpp
test/: CMakeLists.txt
test/include/: readme_ja.md  ut_sched.h  wasm_export.h
test/include/edge-software-framework-sensor/src/esf/sensor_main/include/: sensor_main.h
test/include/edge-software-framework/src/esf/button_manager/include/: button_manager.h
test/include/edge-software-framework/src/esf/clock_manager/include/: clock_manager.h  clock_manager_setting.h
test/include/edge-software-framework/src/esf/firmware_manager/include/: firmware_manager.h
test/include/edge-software-framework/src/esf/led_manager/include/: led_manager.h
test/include/edge-software-framework/src/esf/log_manager/include/: log_manager.h
test/include/edge-software-framework/src/esf/memory_manager/include/: memory_manager.h
test/include/edge-software-framework/src/esf/network_manager/include/: network_manager.h
test/include/edge-software-framework/src/esf/parameter_storage_manager/include/: parameter_storage_manager.h  parameter_storage_manager_common.h
test/include/edge-software-framework/src/esf/power_manager/include/: power_manager.h
test/include/edge-software-framework/src/hal/include/: hal.h  hal_driver.h  hal_i2c.h  hal_ioexp.h
test/include/edge-software-framework/src/utility/log/include/: utility_log.h  (+1 more)
test/include/evp-device-agent/evp_agent/: sdk_backdoor.h
test/include/evp-device-agent/evp_agent/include/: sdk_backdoor.h
test/include/linux/Raspi/: config.h
test/include/mock/: ut_mock_clock_manager.h  ut_mock_codec_json.h  ut_mock_isabutton.h  ut_mock_network_manager.h  ut_mock_std_memory_allocate.h  ut_mock_std_pthread_h.h  ut_mock_sysappcmn.h  ut_mock_utility_msg.h
test/include/nuttx/: compiler.h
test/include/nuttx/T3P/: config.h
test/include/nuttx/T3Ws/: config.h
test/include/nuttx/T5/: config.h
test/include/nuttx/himem/: himem.h
test/include/nuttx/timers/: timer.h
test/include/video_stream/: vsclient.h  wire_protocol.h
test/include/zxing-cpp/src/wrappers/c/: zxing-c.h
test/initial_setting_app/initial_setting_app_button/: CMakeLists.txt  ut_initial_setting_app_button.c
test/initial_setting_app/initial_setting_app_ps/: CMakeLists.txt  ut_initial_setting_app_ps.c
test/initial_setting_app/initial_setting_app_ps_stub/: CMakeLists.txt  ut_initial_setting_app_ps_stub.c
test/initial_setting_app/initial_setting_app_qr_decode/: CMakeLists.txt  ut_initial_setting_app_qr_decode.c
test/initial_setting_app/initial_setting_app_qr_decode_internal/: CMakeLists.txt  ut_initial_setting_app_qr_decode_internal.c
test/initial_setting_app/initial_setting_app_qrcode/: CMakeLists.txt  ut_initial_setting_app_qrcode.c
test/initial_setting_app/initial_setting_app_timer/: CMakeLists.txt  ut_initial_setting_app_timer.c
test/initial_setting_app/main/: CMakeLists.txt  ut_main.c
test/mock/: ut_mock_button_manager.c  ut_mock_clock_manager.c  ut_mock_codec_base64.c  ut_mock_codec_jpeg.c  ut_mock_codec_json.c  ut_mock_devicesetting.c  ut_mock_esfsensor.c  ut_mock_evpagent.c  ut_mock_firmware_manager.c  ut_mock_hal.c  ut_mock_isabutton.c  ut_mock_isadecode.c  ut_mock_isadecodeinternal.c  ut_mock_isamain.c  ut_mock_isaps.c  ut_mock_isaqrcode.c  ut_mock_isatimer.c  ut_mock_led_manager.c  ut_mock_log_manager.c  ut_mock_mbedtls.c  ut_mock_memory_manager.c  ut_mock_mount.c  ut_mock_network_manager.c  ut_mock_parameter_storage_manager.c  ut_mock_power_manager.c  ut_mock_printf.c  ut_mock_quirc.c  ut_mock_sched.c  ut_mock_senscord.c  ut_mock_sleep.c  ut_mock_stat.c  ut_mock_std_memory_allocate.c  ut_mock_std_pthread_h.c  ut_mock_std_time_h.c  ut_mock_sysappadditionalinfo.c  ut_mock_sysappbtn.c  ut_mock_sysappcfg.c  ut_mock_sysappcmn.c  ut_mock_sysappdcmd.c  ut_mock_sysappdeploy.c  (+12 more)
test/script/: env_setup.sh  exec_unit_test.sh  gen_html.sh  run_unit_test.sh
test/system_app/system_app_button/: CMakeLists.txt  ut_system_app_button.c
test/system_app/system_app_common/: CMakeLists.txt  ut_system_app_common.c
test/system_app/system_app_configuration/: CMakeLists.txt  ut_system_app_configuration.c
test/system_app/system_app_deploy/: CMakeLists.txt  ut_system_app_deploy.c
test/system_app/system_app_direct_command/: CMakeLists.txt  ut_system_app_direct_command.c
test/system_app/system_app_led/: CMakeLists.txt  ut_system_app_led.c
test/system_app/system_app_log/: CMakeLists.txt  ut_system_app_log.c
test/system_app/system_app_main/: CMakeLists.txt  ut_system_app_main.c
test/system_app/system_app_state/: CMakeLists.txt  ut_system_app_state.c
test/system_app/system_app_timer/: CMakeLists.txt  ut_system_app_timer.c
test/system_app/system_app_ud_main/: CMakeLists.txt  ut_system_app_ud_main.c
(+63 files in other folders)
