# SPDX-FileCopyrightText: 2024-2025 Sony Semiconductor Solutions Corporation
#
# SPDX-License-Identifier: Apache-2.0

system_app_sources += files([
	'system_app_button.c',
	'system_app_common.c',
	'system_app_configuration.c',
	'system_app_deploy.c',
	'system_app_direct_command.c',
	'system_app_led.c',
	'system_app_log.c',
	'system_app_main.c',
	'system_app_state.c',
	'system_app_timer.c',
	'system_app_ud_main.c'
])
